--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,24 @@
 {
-  "name": "irazasyed/telegram-bot-sdk",
-  "description": "The Unofficial Telegram Bot API PHP SDK",
+  "name": "exileed/telegram-bot-api",
+  "description": "The Telegram Bot API PHP",
   "keywords": ["telegram", "telegram bot", "telegram bot api", "telegram sdk", "telegram php", "laravel telegram", "laravel"],
   "type": "library",
-  "homepage": "https://github.com/irazasyed/telegram-bot-sdk",
+  "homepage": "https://github.com/exileed/telegram-bot-sdk",
   "license": "BSD-3-Clause",
   "authors": [
     {
       "name": "Syed Irfaq R.",
       "email": "syed+gh@lukonet.com",
       "homepage": "https://github.com/irazasyed"
+    },
+    {
+      "name": "Dmitriy Kuts (ExileeD)",
+      "email": "me@exileed.com",
+      "homepage": "https://exileed.com"
     }
   ],
   "require": {
-    "php": ">=5.5.0",
+    "php": ">=5.6",
     "guzzlehttp/guzzle": "~6.0",
     "illuminate/support": "~5.0",
     "league/event": "^2.1"
