--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     "league/event": "^2.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8 || ^5.0",
-    "phpspec/prophecy": "^1.5"
+    "phpunit/phpunit": "^4.8 || ^5.0"
   },
   "autoload": {
     "psr-4": {
@@ -47,6 +46,14 @@
   "extra": {
     "branch-alias": {
       "dev-master": "0.1-dev"
+    },
+    "laravel": {
+      "providers": [
+        "Telegram\\Bot\\Laravel\\TelegramServiceProvider"
+      ],
+      "aliases": {
+        "Debugbar": "Telegram\\Bot\\Laravel\\Facades\\Telegram"
+      }
     }
   },
   "config": {
