--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
   "require": {
     "php": ">=5.6",
     "guzzlehttp/guzzle": "~6.0",
-    "illuminate/support": "~5.0",
-    "league/event": "^2.1"
+    "illuminate/support": "~5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8 || ^5.0"
@@ -44,7 +43,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.1-dev"
+      "dev-master": "0.2-dev"
     },
     "laravel": {
       "providers": [
