--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
     }
   ],
   "require": {
-    "php": ">=5.6",
+    "php": "^7.1",
     "guzzlehttp/guzzle": "~6.0",
     "illuminate/support": "~5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8 || ^5.0"
+    "phpunit/phpunit": "^6.0"
   },
   "autoload": {
     "psr-4": {
@@ -43,7 +43,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.1-dev"
+      "dev-develop": "0.2-dev"
     },
     "laravel": {
       "providers": [
