--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.1-dev"
+      "dev-master": "0.1-dev",
+      "dev-develop": "0.2-dev"
     },
     "laravel": {
       "providers": [
