--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
     }
   ],
   "require": {
-    "php": ">=5.6",
+    "php": "~7.3",
     "guzzlehttp/guzzle": "~6.0",
-    "illuminate/support": "^5.0 || ^6.0 || ^7.0",
+    "illuminate/support": "^5.0 || ^6.0 || ^7.0 || ^8.0",
     "league/event": "^2.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8 || ^5.0"
+    "phpunit/phpunit": "^9.0",
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "autoload": {
     "psr-4": {
@@ -40,12 +41,14 @@
     "illuminate/container": "Hold dependencies to be injected in commands constructors"
   },
   "scripts": {
-    "test": "phpunit"
+    "test": "phpunit",
+    "fix": "phpcbf",
+    "phpcs": "phpcs"
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.1-dev",
-      "dev-develop": "0.2-dev"
+      "dev-master": "0.3-dev",
+      "dev-develop": "0.3-dev"
     },
     "laravel": {
       "providers": [
