--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
-<ruleset name="Selective Standard">
-    <rule ref="PSR2">
-        <exclude name="PSR1.Methods.CamelCapsMethodName.NotCamelCaps"/>
-    </rule>
+<ruleset name="PSR12">
+    <description>The PSR12 coding standard.</description>
+
+    <rule ref="PSR12" />
+    <file>src</file>
 
     <rule ref="Generic.Files.LineLength">
         <properties>
