--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   ],
   "require": {
     "php": "~7.3",
-    "guzzlehttp/guzzle": "~6.0",
+    "guzzlehttp/guzzle": "~6.0 || ^7.0",
     "illuminate/support": "^5.0 || ^6.0 || ^7.0 || ^8.0",
     "league/event": "^2.1"
   },
