--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ 73, 74 ]
+        php: [ 73, 74, 80 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
